<resources>
    <string name="app_name">KodeProject</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_all_events_string">Все события</string>
    <string name="navigation_my_events_string">Мои события</string>
    <string name="navigation_created_events_string">Созданные события</string>
    <string name="navigation_today_events_string">События сегодня</string>
    <string name="navigation_exit">Выход</string>

    <string name="navigation_create_event_string">Создать новое событие</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
