<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:title="@string/navigation_all_events_string" />
        <item
            android:id="@+id/nav_today_events"
            android:title="@string/navigation_today_events_string"/>
        <item
            android:id="@+id/nav_my_events"
            android:title="@string/navigation_my_events_string" />
        <item
            android:id="@+id/nav_created_events"
            android:title="@string/navigation_created_events_string"
            android:visible="false"/>
        <item
            android:id="@+id/nav_exit"
            android:title="@string/navigation_exit"/>
    </group>
</menu>
